Refactor Django settings module with environment selection logic and python-dotenv integration
- Add environment selection logic in __init__.py based on DJANGO_ENV variable
- Integrate python-dotenv for consistent environment variable management
- Create testing.py settings file for improved test performance
- Add comprehensive settings documentation in docs/settings.md
- Update README.md with information about the new settings structure
- Add pytest configuration and test cases for settings module
- Update requirements.txt with necessary dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,41 @@
-# Django settings
-DJANGO_ENV=development  # Change to 'production' in production environment
+# Django Environment Selection
+# Options: development, production, testing
+DJANGO_ENV=development
+
+# Core Django Settings
 DJANGO_SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=example.com,www.example.com
-DJANGO_LOG_LEVEL=INFO
+DEBUG=True  # Set to False in production
+ALLOWED_HOSTS=localhost,127.0.0.1,example.com
+LANGUAGE_CODE=en-us
+TIME_ZONE=UTC
 
-# Database settings
-DATABASE_URL=postgres://user:password@localhost/dbname
+# Static and Media Files
+STATIC_URL=/static/
+MEDIA_URL=/media/
 
-# Email settings
+# Database Settings
+# SQLite (default for development)
+# Leave DATABASE_URL unset to use SQLite
+
+# PostgreSQL (recommended for production)
+# DATABASE_URL=postgres://user:password@localhost:5432/dbname
+
+# Database Connection Settings
+DB_CONN_MAX_AGE=600
+DB_CONN_HEALTH_CHECKS=True
+
+# Password Validation
+MIN_PASSWORD_LENGTH=8
+
+# Email Settings
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend  # For development
+# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend  # For production
 EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_HOST_USER=your-email@example.com
 EMAIL_HOST_PASSWORD=your-email-password
+EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
 DEFAULT_FROM_EMAIL=noreply@example.com
 
 # AWS S3 Settings (for production static/media files)
@@ -19,6 +43,31 @@ USE_S3=False
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
 AWS_STORAGE_BUCKET_NAME=your-bucket-name
+AWS_S3_CUSTOM_DOMAIN=  # Leave empty to use default {bucket}.s3.amazonaws.com
+AWS_S3_CACHE_MAX_AGE=86400
+STATIC_LOCATION=static
+MEDIA_LOCATION=media
 
-# Redis cache settings
+# Redis Cache Settings
 REDIS_URL=redis://localhost:6379/1
+REDIS_SOCKET_TIMEOUT=5
+USE_REDIS_SESSIONS=False
+
+# Security Settings
+DISABLE_SSL=True  # Set to False in production
+SECURE_HSTS_SECONDS=31536000
+SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+SECURE_HSTS_PRELOAD=True
+X_FRAME_OPTIONS=DENY
+
+# Logging
+ROOT_LOG_LEVEL=INFO
+DJANGO_LOG_LEVEL=INFO
+DB_LOG_LEVEL=WARNING
+
+# Development Tools
+ENABLE_DEBUG_TOOLBAR=False
+
+# API Keys
+OPENAI_API_KEY=your-openai-api-key
+HUGGINGFACE_API_KEY=your-huggingface-api-key
