Implement security enhancements for API key management

--- a/.env.example
+++ b/.env.example
@@ -49,11 +49,20 @@ STATIC_LOCATION=static
 MEDIA_LOCATION=media
 
 # Redis Cache Settings
-REDIS_URL=redis://localhost:6379/1
+REDIS_URL=redis://localhost:6379/0
 REDIS_SOCKET_TIMEOUT=5
 USE_REDIS_SESSIONS=False
 
+# API Keys (Never commit actual keys to version control)
+OPENAI_API_KEY=your-openai-api-key
+HUGGINGFACE_API_KEY=your-huggingface-api-key
+
 # Security Settings
+# Generate a random string for ENCRYPTION_KEY_SALT
+# Example: python -c "import secrets; print(secrets.token_hex(16))"
+ENCRYPTION_KEY_SALT=your-random-salt-string
+
+# SSL Security Settings
 DISABLE_SSL=True  # Set to False in production
 SECURE_HSTS_SECONDS=31536000
 SECURE_HSTS_INCLUDE_SUBDOMAINS=True
