--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Pillow>=10.0.0
 python-dotenv>=1.0.0
 requests>=2.31.0
 djangorestframework>=3.14.0
+cryptography>=41.0.0  # For secure encryption
 
 # Database adapters
 dj-database-url>=2.1.0  # For database URL configuration
