Enhance logging system with structured logging for user forms and API interactions
- Add comprehensive user forms logging for authentication and profile updates
- Create API logging demo with examples for successful, failed, and exception cases
- Add real API call example using JSONPlaceholder
- Update documentation with detailed logging guide
- Fix logging configuration and add required dependencies
- Enhance test_logging management command with form logging tests
- Improve UI with navigation between different logging demo pages

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ hiredis>=2.2.3  # C parser for Redis
 
 # Development tools
 django-debug-toolbar>=4.2.0  # Debug toolbar for development
+colorlog>=6.7.0  # Colored console logging for development
 
 # Testing
 pytest>=7.4.0  # Testing framework
